Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
         <h3>
 <a id="numerical-simulation-assignments" class="anchor" href="#numerical-simulation-assignments" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Numerical Simulation assignments:</h3>
 
-<p>First assignment (CV): <a href="numeraire92.github.io/first_assignment/cv">numeraire92.github.io/first_assignment/cv</a> - brief comments on the assignment can be found <a href="numeraire92.github.io/first_assignment">here</a>.</p>
+<ul>
+<li>
+<p>First assignment (CV):</p>
+
+<p><a href="numeraire92.github.io/first_assignment/cv">numeraire92.github.io/first_assignment/cv</a> - brief comments on the assignment can be found <a href="numeraire92.github.io/first_assignment">here</a>.</p>
+</li>
+</ul>
       </section>
 
     </div>
