Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <li>
 <p>First assignment (CV):</p>
 
-<p><a href="numeraire92.github.io/first_assignment/cv">numeraire92.github.io/first_assignment/cv</a> - brief comments on the assignment can be found <a href="numeraire92.github.io/first_assignment">here</a>.</p>
+<p><a href="http://numeraire92.github.io/first_assignment/cv">numeraire92.github.io/first_assignment/cv</a> - brief comments on the assignment can be found <a href="http://numeraire92.github.io/first_assignment">here</a>.</p>
 </li>
 </ul>
       </section>
